[package]
name = "test01"
version = "0.1.0"
authors = ["devg1120 <devg1120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-lua = "0.7"
actix = "0.7"
futures = "*"
#actix = "0.10.0"
#actix-rt = "1.1" # <-- Runtime for actix
