[package]
name = "test04"
version = "0.1.0"
authors = ["devg1120 <devg1120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-lua = { git = "https://github.com/devg1120/actix-lua2", branch = "main"}
actix = "0.10"
actix-rt = "1.1.1"
actix_derive = "0.5"
futures = "0.3"
tokio = "0.2"
rlua = "0.17"
